syntax = "proto3";

package api;
option go_package = "./api";

message Void {

}

message Message {
    string body = 1;
}

message IsActive {
    bool isUp = 1;
}

message ServerInfo {
    string serverName = 1;
    string timezone = 2;
}

message MonitorData {
    string monitorData = 1; 
}

message MonitorDataRequest {
    string serverName = 1;
    string logType = 2;
    int64 from = 3;
    int64 to = 4;
    int64 time = 5;
    bool isCustomMetric = 6;
}

service MonitorDataService {
    rpc HandlePing(ServerInfo) returns (Message) {}
    rpc IsUp(ServerInfo) returns (IsActive) {}
    rpc InitAgent(ServerInfo) returns (Message) {}
    rpc HandleMonitorData(MonitorData) returns (Message) {}
    rpc HandleCustomMonitorData(MonitorData) returns (Message) {}
    rpc HandleMonitorDataRequest(MonitorDataRequest) returns (MonitorData) {}
    rpc HandleCustomMetricNameRequest(ServerInfo) returns (Message) {}
    rpc HandleAgentIdsRequest(Void) returns (Message) {}
}